Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -410,14 +410,53 @@
   </section>
 
   <!-- ✅ FOOTER (THIS WAS MISSING) -->
-  <footer class="footer" id="footer">
-    <div class="container">
-      <div class="footer-bottom">
-        <p>© <span id="year"></span> Onix Marketing. All rights reserved.</p>
-        <p class="footer-promise">If you don’t win work, we don’t get paid.</p>
+ <!-- FOOTER -->
+<footer class="footer" id="footer">
+  <div class="container">
+    <div class="footer-grid">
+      <div class="footer-col">
+        <img src="logo2.png" alt="Onix Marketing" class="footer-logo" />
+        <p class="footer-desc">
+          A fully managed acquisition + follow-up engine for tradies, solar, agencies, and local service businesses.
+        </p>
+
+        <div class="footer-badges">
+          <span class="f-badge">Receptionist follow-up</span>
+          <span class="f-badge">Booked calls</span>
+          <span class="f-badge">ROI reporting</span>
+        </div>
+      </div>
+
+      <div class="footer-col">
+        <h4>Site</h4>
+        <a href="#top">Home</a>
+        <a href="#proof">Results</a>
+        <a href="#how">How it works</a>
+        <a href="#pricing">Pricing</a>
+        <a href="#book">Book a call</a>
+      </div>
+
+      <div class="footer-col">
+        <h4>Company</h4>
+        <a href="#book">Contact</a>
+        <a href="#book">Support</a>
+      </div>
+
+      <div class="footer-col">
+        <h4>Legal</h4>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="terms.html">Terms of Service</a>
+        <a href="cookies.html">Cookie Policy</a>
       </div>
     </div>
-  </footer>
+
+    <div class="footer-bottom">
+      <p>© <span id="year"></span> Onix Marketing. All rights reserved.</p>
+      <p class="footer-promise">If you don’t win work, we don’t get paid.</p>
+    </div>
+  </div>
+</footer>
+
 
   <!-- Cookie banner -->
   <div class="cookie" id="cookieBanner" role="dialog" aria-live="polite" aria-label="Cookie notice" aria-hidden="true">
@@ -440,3 +479,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
